tekst og url navn

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -15,7 +15,7 @@
       </button>
       <ul class="nav-menu">
         <li class="nav-item dropdown">
-          <a href="/liste/" data-action="dropdown-toggle">PROGRAM</a>
+          <a href="/program/" data-action="dropdown-toggle">PROGRAM</a>
         </li>
         <li class="nav-item dropdown dk">
           <a href="#" data-action="dropdown-toggle">
