--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,15 +63,18 @@ import Tekstbox2 from "../components/TekstBox2.astro";
         <div>
           <Tekstbox>
             <h3 slot="h3">COPENHAGEN LIGHT FESTIVAL</h3>
-            <p slot="p1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, reiciendis? Consequuntur, ratione? Earum ab dignissimos voluptas quis neque doloribus excepturi, deleniti harum doloremque magni voluptatem eveniet magnam! Distinctio, hic corporis?</p>
-            <p slot="p2">HEJ MED DIGIIIIIIIIIIIIIIIIIIIG</p>
+            <p slot="p1">Copenhagen Light Festival is an annual light festival that transforms the quiet and cold winter darkness into a unique celebration of light art, lighting design and illumination in the center of Copenhagen.</p>
+            <p slot="p2">
+              In three weeks of February the festival presents a wide range of light based works – such as sculpture, installation, projection mapping, event and illumination created by both established and upcoming light artists, lighting designers, students and organizations. With a tailored light program selected by a curatorial committee, the festival exhibits, accentuates and interprets the city’s different spaces,squares, facades, bridges and hidden places in a new and engaging way. The majority of the light works are placed along a path in the inner city and the harbor, while a selection of art works that can be experienced in areas located outside of the city center. The Festival invites both international and local audiences of all ages to enjoy the city during the darkest and
+              even the coldest time of the year.
+            </p>
           </Tekstbox>
         </div>
         <div>
           <Tekstbox2>
             <h3 slot="h3">SUSTAINABILITY</h3>
-            <p slot="p1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, reiciendis? Consequuntur, ratione? Earum ab dignissimos voluptas quis neque doloribus excepturi, deleniti harum doloremque magni voluptatem eveniet magnam! Distinctio, hic corporis?</p>
-            <p slot="p2">HEJ MED DIGIIIIIIIIIIIIIIIIIIIG</p>
+            <p slot="p1">Ørsted is the sponsors of green electricity for the festival. It ensures green wind energy for the overall energy draw during the festival. During one day the festival’s electricity usage correspond with 3 fully charged electric cars</p>
+            <p slot="p2">Maps are not printed, but our mobile app shows where all the installations are placed relative to your own location. Maps can also be printed via our homepage, and are visible also on the all the pylons set up around the city.</p>
           </Tekstbox2>
         </div>
       </div>
