--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,10 +81,10 @@ import Tekstbox2 from "../components/TekstBox2.astro";
 
       <h5>FONDE</h5>
       <div class="gridimg">
-        <img src="/img/logo1.png" alt="logo1" class="glypto" />
-        <img src="/img/logo2.png" alt="logo2" class="nordbro" />
-        <img src="/img/logo3.png" alt="logo3" class="ano" />
-        <img src="/img/logo4.png" alt="logo4" class="kbh" />
+        <img src="img/logo1.png" alt="logo1" class="glypto" />
+        <img src="img/logo2.png" alt="logo2" class="nordbro" />
+        <img src="img/logo3.png" alt="logo3" class="ano" />
+        <img src="img/logo4.png" alt="logo4" class="kbh" />
         <Scroll />
         <Popup />
       </div>
