--- a/src/components/Scroll.astro
+++ b/src/components/Scroll.astro
@@ -8,6 +8,7 @@
     height: 50px;
     text-align: center;
     border-radius: 4px;
+    border: 2px solid var(--button);
     position: fixed;
     bottom: 30px;
     right: 30px;
@@ -17,7 +18,7 @@
       visibility 0.5s;
     opacity: 0;
     visibility: hidden;
-    z-index: 1000;
+    z-index: 100;
   }
   #button::after {
     content: "\f077";
