--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ import Tekstbox2 from "../components/TekstBox2.astro";
     <main>
       <a href=""></a>
       <video width="100%" height="auto" autoplay muted>
-        <source src="./public/copenhagen.mp4" type="video/mp4" />
+        <source src="/copenhagen.mp4" type="video/mp4" />
       </video>
       <Banner />
       <div class="gridbutton">
