--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ import Tekstbox2 from "../components/TekstBox2.astro";
       <div class="gridbutton">
         <div class="firstbutton">
           <ImgButton img="https://copenhagenlightfestival.org/wp-content/uploads/2023/02/MANDALEG.jpeg" />
-          <div class="centered"><a href="/liste/" class="center">2024</a></div>
+          <div class="centered"><a href="/program/" class="center">2024</a></div>
         </div>
 
         <div class="firstbutton">
